tests/snapshots/asymmetric_visibility_validation__asymmetric_visibility_with_readonly.snap
---
source: tests/asymmetric_visibility_validation.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 21,
                },
            },
            extends: None,
            implements: [],
            members: [
                Property {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 28,
                                end: 34,
                            },
                        },
                        Token {
                            kind: Readonly,
                            span: Span {
                                start: 35,
                                end: 43,
                            },
                        },
                        Token {
                            kind: PrivateSet,
                            span: Span {
                                start: 44,
                                end: 56,
                            },
                        },
                    ],
                    ty: Some(
                        Simple(
                            Token {
                                kind: TypeString,
                                span: Span {
                                    start: 57,
                                    end: 63,
                                },
                            },
                        ),
                    ),
                    entries: [
                        PropertyEntry {
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 64,
                                    end: 70,
                                },
                            },
                            default: None,
                            span: Span {
                                start: 64,
                                end: 70,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 28,
                        end: 73,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 74,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 74,
    },
}
