tests/snapshots/asymmetric_visibility_validation__nested_class_asymmetric_visibility.snap
---
source: tests/asymmetric_visibility_validation.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 17,
                },
            },
            extends: None,
            implements: [],
            members: [
                Property {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 24,
                                end: 30,
                            },
                        },
                        Token {
                            kind: PrivateSet,
                            span: Span {
                                start: 31,
                                end: 43,
                            },
                        },
                    ],
                    ty: Some(
                        Simple(
                            Token {
                                kind: TypeString,
                                span: Span {
                                    start: 44,
                                    end: 50,
                                },
                            },
                        ),
                    ),
                    entries: [
                        PropertyEntry {
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 51,
                                    end: 57,
                                },
                            },
                            default: None,
                            span: Span {
                                start: 51,
                                end: 57,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 24,
                        end: 74,
                    },
                },
                Method {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 68,
                                end: 74,
                            },
                        },
                    ],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 84,
                            end: 92,
                        },
                    },
                    params: [],
                    return_type: None,
                    body: [
                        Return {
                            expr: Some(
                                New {
                                    class: AnonymousClass {
                                        attributes: [],
                                        modifiers: [],
                                        args: [],
                                        extends: None,
                                        implements: [],
                                        members: [
                                            Property {
                                                attributes: [],
                                                modifiers: [
                                                    Token {
                                                        kind: Public,
                                                        span: Span {
                                                            start: 136,
                                                            end: 142,
                                                        },
                                                    },
                                                    Token {
                                                        kind: PrivateSet,
                                                        span: Span {
                                                            start: 143,
                                                            end: 155,
                                                        },
                                                    },
                                                ],
                                                ty: Some(
                                                    Simple(
                                                        Token {
                                                            kind: TypeString,
                                                            span: Span {
                                                                start: 156,
                                                                end: 162,
                                                            },
                                                        },
                                                    ),
                                                ),
                                                entries: [
                                                    PropertyEntry {
                                                        name: Token {
                                                            kind: Variable,
                                                            span: Span {
                                                                start: 163,
                                                                end: 169,
                                                            },
                                                        },
                                                        default: None,
                                                        span: Span {
                                                            start: 163,
                                                            end: 169,
                                                        },
                                                    },
                                                ],
                                                doc_comment: None,
                                                span: Span {
                                                    start: 136,
                                                    end: 180,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 116,
                                            end: 181,
                                        },
                                    },
                                    args: [],
                                    span: Span {
                                        start: 112,
                                        end: 181,
                                    },
                                },
                            ),
                            span: Span {
                                start: 105,
                                end: 187,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 68,
                        end: 187,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 190,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 190,
    },
}
